# ITSDashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Kopie.env  README.md  _todo.txt  docker-compose.yml  pyproject.toml
config/: categories.yaml  sources.yaml
deploy/: nginx-its-briefing.conf
docs/superpowers/plans/: 2026-04-07-its-briefing-docker-deployment.md  2026-04-07-its-briefing.md  2026-04-28-llm-provider-switching.md  2026-04-29-sources-management.md
docs/superpowers/specs/: 2026-04-07-its-briefing-design.md  2026-04-07-its-briefing-docker-deployment-design.md  2026-04-28-llm-provider-switching-design.md  2026-04-29-sources-management-design.md
its_briefing/: __init__.py  __main__.py  app.py  config.py  db.py  fetch.py  generate.py  llm.py  models.py  scheduler.py  sources.py  storage.py
its_briefing/templates/: briefing.html  settings.html  sources.html
tests/: test_app.py  test_config.py  test_db.py  test_fetch.py  test_generate.py  test_llm.py  test_sources.py  test_storage.py
tests/fixtures/: sample_feed.xml
