[project]
name = "its-briefing"
version = "0.1.0"
description = "Daily AI-curated cybersecurity briefing"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "feedparser>=6.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "freezegun>=1.4",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["its_briefing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
